[gd_scene load_steps=3 format=3 uid="uid://daou56cjmhvxa"]

[ext_resource type="Script" path="res://timer_controls/timer_controls.gd" id="1_ap4ct"]

[sub_resource type="ButtonGroup" id="ButtonGroup_81n3v"]

[node name="HBoxContainer" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ap4ct")

[node name="ZeroXButton" type="Button" parent="."]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_81n3v")
text = "stop"

[node name="OneXButton" type="Button" parent="."]
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_81n3v")
text = "1x"

[node name="TwoXButton" type="Button" parent="."]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_81n3v")
text = "2x"

[node name="FourXButton" type="Button" parent="."]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_81n3v")
text = "4x"

[node name="EightXButton" type="Button" parent="."]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_81n3v")
text = "8x"

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "2000/01/02 00:00"
